Added a minimal unit‑test setup (no external deps) and made the settings logic testable without changing runtime behavior.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,6 +33,7 @@
         "content/rules/stories.js",
         "content/rules/reels.js",
         "content/rules/suggested.js",
+        "content/settings.js",
         "content/content.js"
       ],
       "run_at": "document_idle"
