--- a/.github/workflows/package-firefox.yml
+++ b/.github/workflows/package-firefox.yml
@@ -22,8 +22,10 @@ jobs:
         run: npm install --no-save web-ext
       - name: Build XPI
         run: npx web-ext build --source-dir src --artifacts-dir dist
+      - name: List artifacts
+        run: ls -la dist
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: freshbook-firefox-xpi
-          path: dist/*.xpi
+          path: dist/*.{xpi,zip}
